<resources>
    <string name="app_name">PaidAid</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Login/Registration -->
    <string name="title_activity_login">LoginActivity</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login_button">Login</string>
    <string name="logout_button">Logout</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="confirm_button">Confirm</string>
    <string name="email">Email</string>


    <!-- Navigation Bar -->
    <string name="home_button">HOME</string>
    <string name="add_button">ADD</string>
    <string name="messages_button">MESSAGES</string>
    <string name="requests_button">REQUESTS</string>

    <!-- Shared Preferences -->
    <string name="LOGIN_PREFS">uw.tacoma.edu.PaidAid.PREFS</string>
    <string name="LOGGEDIN">loggedin</string>
    <string name="USERNAME">username</string>
    <string name="EMAIL">email</string>
    <string name="USERID">userid</string>
    <string name="USER_RATING">user_rating</string>

    <!-- Tags for ID's-->
    <string name="home_tag">home_requests_tag</string>
    <string name="messages_tag">messages_tag</string>
    <string name="myRequests_tag">myRequests_tag</string>
    <string name="add_tag">add_tag</string>
    <string name="date_tag">date_tag</string>


    <!-- Post Request Text Edits -->
    <string name="post_request">Post!</string>
    <string name="tip">$0.00</string>
    <string name="zipCode">Zipcode</string>
    <string name="store_name">Any specific store?</string>
    <string name="items_comments">What do you want picked up?</string>
    <string name="date_picked_text">Recieve by</string>

    <!-- Post Request Text Views-->
    <string name="tip_amount_text_view">Tip Amount</string>
    <string name="location_text_view">Location</string>
    <string name="store_name_text_view">Store Name</string>
    <string name="items_and_comments_text_view">Items / Additional Comments</string>

    <!-- Pick up Request / Request Fragment -->
    <string name="pickup_request">Pick Up!</string>
    <string name="type_message">Find out where to meet, time, and other details..</string>

    <!-- Review Fragment -->
    <string name="submit_review">Submit Review</string>
    <string name="submit_a_review">Submit A Review</string>

    <!-- My Messages Fragment -->
    <string name="messages_text_view">Your Messages</string>

    <!-- Expired / Current Requests -->
    <string name="expired_requests_post_again_button">Re-post</string>


    <!-- Location Services Google-->
    <string name="google_app_id">10</string>



</resources>
