<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="uw.tacoma.edu.paidaid.authenticate.LoginFragment"
    android:weightSum="1">

    <!-- Paid Aid Image View -->
    <ImageView
        android:id="@+id/paidaid"
        android:layout_width="0dp"
        android:layout_height="107dp"
        android:src="@drawable/paidaid"
        android:scaleType="fitCenter"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginTop="20dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <!-- Confirm button -->
    <Button
        android:id="@+id/confirm_button"
        android:layout_width="92dp"
        android:layout_height="39dp"
        android:backgroundTint="@color/paidAidBlue"
        android:text="@string/confirm_button"
        android:textColor="@android:color/white"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="210dp"
        app:layout_constraintTop_toBottomOf="@+id/paidaid" />

    <!-- Email text box with hint -->
    <EditText
        android:id="@+id/email_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:textColor="@color/grey"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="9dp"
        app:layout_constraintBottom_toTopOf="@+id/password_text" />

    <!-- Password text box with hint -->
    <EditText
        android:id="@+id/password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:textColor="@color/grey"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="146dp"
        app:layout_constraintTop_toBottomOf="@+id/paidaid" />

    <!-- Account Registration Text View -->
    <TextView
        android:layout_width="239dp"
        android:layout_height="31dp"
        android:layout_marginTop="34dp"
        android:text="Account Registration"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintHorizontal_bias="0.586"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/textView2" />

    <!-- Username text box with hint -->
    <EditText
        android:id="@+id/username_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/username"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/email_text" />


</android.support.constraint.ConstraintLayout>
