<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">

    <!---->
    <android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/add_request_button_layout"
        android:background="@color/light_light_grey">


        <!-- Tip Amount text field -->
        <EditText
            android:id="@+id/tip_amount_text"
            android:layout_width="327dp"
            android:layout_height="45dp"
            android:background="@drawable/add_requests_style"
            android:ems="10"
            android:hint="@string/tip"
            android:inputType="numberDecimal"
            android:paddingLeft="@dimen/text_margin"
            android:textColor="@color/grey"
            android:layout_above="@+id/location_request"
            android:layout_centerHorizontal="true"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="53dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent" />

        <!-- Location text field -->
        <EditText
            android:id="@+id/location"
            android:layout_width="327dp"
            android:layout_height="45dp"
            android:layout_above="@+id/store_name_text"
            android:layout_alignLeft="@+id/tip_amount_text"
            android:layout_alignStart="@+id/tip_amount_text"
            android:layout_marginTop="34dp"
            android:background="@drawable/add_requests_style"
            android:ems="10"
            android:hint="@string/zipCode"
            android:inputType="textPostalAddress"
            android:paddingLeft="@dimen/text_margin"
            android:textColor="@color/grey"
            app:layout_constraintTop_toBottomOf="@+id/tip_amount_text"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintHorizontal_bias="0.508" />

        <!-- Store Name text field -->
        <EditText
            android:id="@+id/store_name"
            android:layout_width="327dp"
            android:layout_height="45dp"
            android:layout_alignLeft="@+id/location"
            android:layout_alignStart="@+id/location"
            android:layout_marginTop="36dp"
            android:background="@drawable/add_requests_style"
            android:ems="10"
            android:hint="@string/store_name"
            android:inputType="textPostalAddress"
            android:paddingLeft="@dimen/text_margin"
            android:textColor="@color/grey"
            app:layout_constraintTop_toBottomOf="@+id/location"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintHorizontal_bias="0.508" />



        <!-- Items & Comments text field -->
        <EditText
            android:id="@+id/items_comments"
            android:layout_width="327dp"
            android:layout_height="103dp"
            android:layout_alignBottom="@+id/post_request_button"
            android:layout_marginTop="37dp"
            android:background="@drawable/add_requests_style"
            android:ems="10"
            android:hint="@string/items_comments"
            android:inputType="textMultiLine"
            android:paddingLeft="@dimen/text_margin"
            android:textColor="@color/grey"
            app:layout_constraintHorizontal_bias="0.52"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:gravity="top|left"
            app:layout_constraintTop_toBottomOf="@+id/store_name"
            android:layout_marginLeft="0dp" />

        <!-- Post button -->
        <Button
            android:id="@+id/post_again_request_button"
            android:layout_width="189dp"
            android:layout_height="48dp"
            android:backgroundTint="@color/paidAidBlue"
            android:text="@string/expired_requests_post_again_button"
            android:textColor="@android:color/white"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            app:layout_constraintTop_toBottomOf="@+id/items_comments"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="55dp"
            app:layout_constraintVertical_bias="0.061" />

        <!-- Tip Amount text view -->
        <TextView
            android:id="@+id/tip_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tip_amount_text_view"
            android:textStyle="bold"
            android:layout_above="@+id/tip_amount_text"
            android:layout_alignLeft="@+id/tip_amount_text"
            android:layout_alignStart="@+id/tip_amount_text"
            android:layout_marginTop="33dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintHorizontal_bias="0.135" />

        <!-- Location text view -->
        <TextView
            android:id="@+id/location_request"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location_text_view"
            android:textStyle="bold"
            android:layout_above="@+id/location"
            android:layout_alignLeft="@+id/tip_text"
            android:layout_alignStart="@+id/tip_text"
            android:layout_marginTop="60dp"
            app:layout_constraintTop_toBottomOf="@+id/tip_text"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintHorizontal_bias="0.128" />

        <!-- Store name text view -->
        <TextView
            android:id="@+id/store_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/store_name_text_view"
            android:textStyle="bold"
            android:layout_above="@+id/store_name"
            android:layout_alignLeft="@+id/location_request"
            android:layout_alignStart="@+id/location_request"
            android:layout_marginTop="63dp"
            app:layout_constraintTop_toBottomOf="@+id/location_request"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintHorizontal_bias="0.136" />

        <!-- Items & Comments text view -->
        <TextView
            android:id="@+id/items_comments_text"
            android:layout_width="204dp"
            android:layout_height="20dp"
            android:text="@string/items_and_comments_text_view"
            android:textStyle="bold"
            android:layout_above="@+id/items_comments"
            android:layout_marginTop="62dp"
            app:layout_constraintTop_toBottomOf="@+id/store_name_text"
            android:layout_marginLeft="0dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="0dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.283" />


        <!-- Tip amount icon -->
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="22dp"
            android:layout_height="20dp"
            app:srcCompat="@drawable/pricetag"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="31dp"
            android:layout_marginLeft="14dp"
            app:layout_constraintLeft_toLeftOf="parent" />

        <!-- Expiration date edit text-->
        <EditText
            android:id="@+id/expired_date_text_box"
            android:layout_width="134dp"
            android:layout_height="32dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:inputType="textPostalAddress"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginRight="28dp"
            app:layout_constraintRight_toRightOf="parent"
            android:background="@drawable/add_requests_style"
            android:hint="EXPIRED"
            android:textColor="@color/paidAidRed"
            android:paddingLeft="@dimen/text_margin"
            />

        <!-- Location icon -->
        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="19dp"
            android:layout_height="28dp"
            app:srcCompat="@drawable/location"
            android:layout_marginLeft="17dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="53dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <!-- Items & comments icon -->
        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="30dp"
            android:layout_height="25dp"
            app:srcCompat="@drawable/shoppingcart"
            android:layout_marginLeft="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="59dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView8" />

        <!-- Store name icon -->
        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="21dp"
            android:layout_height="19dp"
            app:srcCompat="@drawable/storename"
            android:layout_marginLeft="17dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="58dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView4" />

        <!-- Date picker calendar icon -->
        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="34dp"
            android:layout_height="28dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/calendar"
            app:layout_constraintRight_toLeftOf="@+id/expired_date_text_box"
            android:layout_marginRight="0dp" />



    </android.support.constraint.ConstraintLayout>
</ScrollView>
