<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/add_request_button_layout"
    android:background="@color/light_light_grey">


    <!-- Tip Amount text field -->
    <EditText
        android:id="@+id/tip_amount_text"
        android:layout_width="327dp"
        android:layout_height="45dp"
        android:background="@drawable/add_requests_style"
        android:ems="10"
        android:hint="@string/tip"
        android:inputType="textPostalAddress"
        android:paddingLeft="@dimen/text_margin"
        android:textColor="@color/grey"
        android:layout_above="@+id/location_request"
        android:layout_centerHorizontal="true"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="53dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <!-- Location text field -->
    <EditText
        android:id="@+id/location"
        android:layout_width="327dp"
        android:layout_height="45dp"
        android:layout_above="@+id/store_name_text"
        android:layout_alignLeft="@+id/tip_amount_text"
        android:layout_alignStart="@+id/tip_amount_text"
        android:layout_marginTop="34dp"
        android:background="@drawable/add_requests_style"
        android:ems="10"
        android:hint="@string/location"
        android:inputType="textPostalAddress"
        android:paddingLeft="@dimen/text_margin"
        android:textColor="@color/grey"
        app:layout_constraintTop_toBottomOf="@+id/tip_amount_text"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.508" />

    <!-- Store Name text field -->
    <EditText
        android:id="@+id/store_name"
        android:layout_width="327dp"
        android:layout_height="45dp"
        android:layout_alignLeft="@+id/location"
        android:layout_alignStart="@+id/location"
        android:layout_marginTop="36dp"
        android:background="@drawable/add_requests_style"
        android:ems="10"
        android:hint="@string/store_name"
        android:inputType="textPostalAddress"
        android:paddingLeft="@dimen/text_margin"
        android:textColor="@color/grey"
        app:layout_constraintTop_toBottomOf="@+id/location"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.508" />



    <!-- Items & Comments text field -->
    <EditText
        android:id="@+id/items_comments"
        android:layout_width="327dp"
        android:layout_height="103dp"
        android:layout_alignBottom="@+id/post_request_button"
        android:layout_marginTop="37dp"
        android:background="@drawable/add_requests_style"
        android:ems="10"
        android:hint="@string/items_comments"
        android:inputType="textMultiLine"
        android:paddingLeft="@dimen/text_margin"
        android:textColor="@color/grey"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:gravity="top|left"
        app:layout_constraintTop_toBottomOf="@+id/store_name" />

    <!-- Post button -->
    <Button
        android:id="@+id/post_request_button"
        android:layout_width="189dp"
        android:layout_height="48dp"
        android:backgroundTint="@color/paidAidBlue"
        android:text="@string/post_request"
        android:textColor="@android:color/white"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        app:layout_constraintTop_toBottomOf="@+id/items_comments"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/tip_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Tip Amount"
        android:textStyle="bold"
        android:layout_above="@+id/tip_amount_text"
        android:layout_alignLeft="@+id/tip_amount_text"
        android:layout_alignStart="@+id/tip_amount_text"
        android:layout_marginTop="33dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.135" />

    <TextView
        android:id="@+id/location_request"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Location"
        android:textStyle="bold"
        android:layout_above="@+id/location"
        android:layout_alignLeft="@+id/tip_text"
        android:layout_alignStart="@+id/tip_text"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toBottomOf="@+id/tip_text"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.128" />

    <TextView
        android:id="@+id/store_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Store Name"
        android:textStyle="bold"
        android:layout_above="@+id/store_name"
        android:layout_alignLeft="@+id/location_request"
        android:layout_alignStart="@+id/location_request"
        android:layout_marginTop="63dp"
        app:layout_constraintTop_toBottomOf="@+id/location_request"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.136" />

    <TextView
        android:id="@+id/items_comments_text"
        android:layout_width="194dp"
        android:layout_height="18dp"
        android:text="Items / Additional Comments"
        android:textStyle="bold"
        android:layout_above="@+id/items_comments"
        android:layout_marginTop="61dp"
        app:layout_constraintTop_toBottomOf="@+id/store_name_text"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.221" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="20dp"
        app:layout_constraintGuide_percent="0.052083332" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline2"
        app:layout_constraintGuide_begin="20dp"
        android:orientation="vertical" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline3"
        app:layout_constraintGuide_begin="20dp"
        android:orientation="vertical" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline4"
        app:layout_constraintGuide_begin="20dp"
        android:orientation="vertical" />

    <Button
        android:id="@+id/date_picker_button"
        android:layout_width="108dp"
        android:layout_height="38dp"
        android:text="Recieve by"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginRight="28dp"
        app:layout_constraintRight_toRightOf="parent"
        android:onClick="launchDatePicker"/>


</android.support.constraint.ConstraintLayout>